Фикс поиска изначальных групп